Added link to manage page, changed directory structure of js

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,8 +7,10 @@
             <h1>Title!</h1>
         </div>
         <div layout:fragment="content">
-            <p class="lead">This is a paragraph from content page 1</p>
-            <p>Use <a href="../sticky-footer-navbar">the sticky footer with a fixed navbar</a> if need be, too.</p>
+            <p class="lead">This is a simple project to demonstrate prototype of ractive-reports engine</p>
+            <p><a href="/manage/index.html">Just go to Manage reports page!</a> </p>
+<!-- TODO: show sample report by default-->
+
         </div>
         <footer>
             <p layout:fragment="custom-footer">This is some footer content from content page 1</p>
