--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -26,6 +26,12 @@
     <script src="lib/html5shiv.min.js"></script>
     <script src="lib/respond.min.js"></script>
     <![endif]-->
+
+    <script src="../../../lib/jquery/jquery-1.10.2.min.js" th:src="@{../lib/jquery/jquery-1.10.2.min.js}"></script>
+    <script src="../../../lib/ractive/ractive.js" th:src="@{../lib/ractive/ractive.js}"></script>
+    <script src="../../../js/hateoas-ractive.js" th:src="@{../js/hateoas-ractive.js}"></script>
+    <script src="../../../lib/ractive/showdown.js" th:src="@{../lib/ractive/showdown.js}"></script>
+
 </head>
 
 <body>
@@ -46,6 +52,8 @@
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
+<script src="../../js/sample-reports.js" th:src="@{../js/sample-reports.js}"></script>
+
 <!-- Placed at the end of the document so the pages load faster -->
 </body>
 </html>
