--- a/src/main/resources/templates/manage/index.html
+++ b/src/main/resources/templates/manage/index.html
@@ -89,8 +89,8 @@
             <p layout:fragment="custom-footer">This is some footer content from content page 1</p>
         </footer>
         <section layout:fragment="custom-js">
-            <script src="../../js/reports.js" th:src="@{../js/reports.js}"></script>
-            <script src="../../js/hateoas-datatable.js" th:src="@{../js/hateoas-datatable.js}"></script>
+            <script src="../../js/manage/reports.js" th:src="@{../js/manage/reports.js}"></script>
+            <script src="../../js/manage/hateoas-datatable.js" th:src="@{../js/manage/hateoas-datatable.js}"></script>
             <script>
                  //CKEDITOR.replace('template');
             </script>
